# EEG-Anxiety-Recognition-Thesis

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  执行流程介绍.md
.github/workflows/: smoke.yml
configs/: README.md  default_joint.json  smoke.json
data/: README.md
data/ds003478/: README.md
data/ds007216/: README.md
data/ds007609/: README.md
data/mendeley_anxiety_control/: README.md
data/original_local/: README.md
docs/: README.md  code_map.md  data_protocol.md  interpretation_notes.md  legacy_preliminary.md  reproduction.md  results.md
results/reference/: README.md  table_5_1_internal_comparison.csv  table_5_8_mendeley_compatibility.csv
scripts/: README.md  _bootstrap.py  prepare_features.py  run_ablations.py  run_smoke.py  train_baselines.py  train_joint.py
src/: README.md
src/anxiety_eeg/: README.md  __init__.py  config.py
src/anxiety_eeg/analysis/: README.md  __init__.py  analyze_direction_consistency.py  compare_split_protocols.py  run_joint_ablation_suite.py  run_shared_subspace_logistic.py
src/anxiety_eeg/data/: README.md  __init__.py  joint_dataset.py
src/anxiety_eeg/evaluation/: README.md  __init__.py
src/anxiety_eeg/features/: README.md  __init__.py  common_dataset_eval.py  eegdash_remote_eval.py  score_ds003478.py  score_ds007609.py
src/anxiety_eeg/legacy/: README.md  __init__.py
src/anxiety_eeg/models/: README.md  __init__.py  joint_constraint.py
src/anxiety_eeg/training/: README.md  __init__.py  (+2 more)
tests/: README.md
tests/fixtures/: README.md
tests/smoke/: README.md
(+7 files in other folders)
