[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anxiety-eeg-thesis"
version = "0.1.0"
description = "EEG anxiety recognition thesis reproduction code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "torch",
  "mne",
  "mne-bids",
  "matplotlib",
  "openpyxl"
]

[tool.setuptools.packages.find]
where = ["src"]
